# newsletter

./: Cargo.toml  README.md
deploy/: newsletter.service  newsletter.stephens.page.conf
src/: db.rs  mail.rs  main.rs  send.rs
