[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"
description = "Self-hosted double opt-in newsletter service for stephens.page/blog (Rust/Axum)"
license = "MIT"

[[bin]]
name = "newsletter"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["limit", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
rand = "0.8"
hex = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 2
